[tool.poetry]
name = "principalai_core"
version = "0.1.0"
description = "Orchestration Layer for Scalable Agentic Applications"
authors = ["Abishanka Saha, <abishanka.saha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.3"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"
