[tool.poetry]
name = "principalai_integrations"
version = "0.1.0"
description = "3rd party integrations for Principalai"
authors = ["Abishanka Saha <abishanka.saha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
